objects/BMCServiceDesk__KM_Feedback__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__FKKnowledgeArticle__c</fullName>
        <label>Knowledge Article</label>
        <referenceTo>BMCServiceDesk__KM_KnowledgeArticle__c</referenceTo>
        <relationshipLabel>Knowledge Feedback</relationshipLabel>
        <relationshipName>Knowledge_Feedback</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Knowledge_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Feedback__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Issue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Did this article meet your need?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Rating__c</fullName>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Helpful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Helpful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Update</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__isClientFeedBack__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Client Feedback</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>